# py_stringmatching

./: CHANGES.txt  MANIFEST.in  README.rst  pyproject.toml  setup.py
.github/workflows/: pip-test.yml  testing.yml
docs/: Installation.rst
py_stringmatching/similarity_measure/cython/: cython_levenshtein.pyx
