[build-system]
requires = [
    "setuptools>=64",
    "wheel",
    "Cython>=0.29",
    "numpy>=1.7.0,<2.0"
]
build-backend = "setuptools.build_meta"

[project]
name = "py-stringmatching"
version = "0.4.7"
description = "Python library for string matching."
readme = "README.rst"
license = {text = "BSD"}
authors = [
    {name = "UW Magellan Team", email = "uwmagellan@gmail.com"}
]
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "License :: OSI Approved :: BSD License",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Utilities",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "numpy>=1.7.0,<2.0",
]

[project.urls]
Homepage = "https://sites.google.com/site/anhaidgroup/projects/magellan/py_stringmatching"

[tool.setuptools]
include-package-data = true
zip-safe = false

[tool.setuptools.packages.find]
exclude = ["benchmarks", "benchmarks.custom_benchmarks"]